# ilab_2course

./: README.md
0task_cache/: ARCache.h  ArcHash.cpp  ArcHash.h  Memory.h  beladyCache.h  cacheData.h  main.cpp  unitTests.cpp  unitTests.h
1task_triangles/: OctoTree.h  Point.h  Triangle.h  Vector3.h  main.cpp  makefile  testGenerator  testGenerator.cpp  tests  tests.h  triangles
1task_triangles/Tests/: 100.1.tst  100.2.ans  100.2.tst
2task_set/: Makefile  compare.cpp  makefile  set.cpp  set.h  test.cpp  testmaker.cpp  tests.h
2task_set/Tests/: ans0.txt  ans1.txt  ans2.txt  ans3.txt  ans4.txt  ans5.txt  test0.txt  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
3task_matrix/: Makefile  matrix  matrix.cpp  matrix.h  testGenerator.cpp  tests.h
3task_matrix/1lvl_determinant/: matrix.cpp  testGenerator.h  tests.h
3task_matrix/2lvl_circuit/: CMakeLists.txt  Makefile  buf.h  main.cpp  main.d  matrix.h  matrixbuf.h  out
3task_matrix/2lvl_circuit/include/: buf.h  circuit.h  driver.h  graph.h  matrix.h  matrixbuf.h  weight.h
3task_matrix/2lvl_circuit/parser/: compiler.y  parser.l
3task_matrix/2lvl_circuit/src/: CMakeLists.txt  circuit.cpp  driver.cpp  graph.cpp  main.cpp
3task_matrix/2lvl_circuit/test/: CMakeLists.txt  tests.cpp.in
3task_matrix/2lvl_circuit/test/Tests/: matrix_test4.txt  matrix_test6.txt
3task_matrix/2lvl_circuit/tests/: tests.h.in
3task_matrix/2lvl_circuit/tests/determinant_tests/: det_test2.txt  det_test7.txt
3task_matrix/Tests/: matrix_ans1.txt  matrix_test1.txt  matrix_test3.txt  matrix_test5.txt
4task_paracl/: .gitignore  CMakeLists.txt  INode.cc  INode.hpp  Makefile  Node.cc  Node.hpp  Scanner.hpp  Symtab.cc  Symtab.hpp  compiler.y  driver.cc  driver.hpp  grammar.l  grammar.y  launch_tests.sh  main.cc  scanner.l
4task_paracl/1lvl_while_if/compiler/: compiler.y  scanner.l
4task_paracl/1lvl_while_if/include/: driver.hpp
4task_paracl/1lvl_while_if/src/: Node.cc  Symtab.cc
4task_paracl/1lvl_while_if/tests/: average_1_output.txt  if_while_1.test  if_while_1_output.txt  precedence_1.test  scolon_1.test
4task_paracl/2lvl_func/: CMakeLists.txt  launch_tests.sh
4task_paracl/2lvl_func/compiler/: compiler.y  scanner.l
4task_paracl/2lvl_func/include/: Node.hpp  Symtab.hpp  driver.hpp
4task_paracl/2lvl_func/src/: Node.cc  Symtab.cc  driver.cc
4task_paracl/2lvl_func/tests/: average_1.test  code_block_1.test  code_block_2.test  func_call_1.test  func_ret_1.test  func_scope_1.test  func_scope_1_output.txt  func_scope_2.test  func_scope_2_output.txt  func_scope_3.test  func_scope_4.test  scope_1.test  scope_2.test
4task_paracl/compiler/: compiler.y
4task_paracl/include/: Node.hpp  Scanner.hpp
4task_paracl/src/: Scanner.cc  driver.cc  main.cc
4task_paracl/tests/: factorial_1.test  mod_1.test  syntax_1.test  syntax_2.test  test.txt
5task_opencl/: CMakeLists.txt
5task_opencl/include/: BitonicSort.h
5task_opencl/kernels/: kernel.cl
5task_opencl/src/: BitonicSort.cpp  main.cpp
